# app-factory

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  roofing.md  water-heater.md
.appfactory/: tasks_index.csv
container-java-springboot/: README.md  pom.xml
docs/: App Factory Overview.md  App Factory Workflow.md  Pattern Selection Example: Healthcare Claim Processing.md  appfactory-agentic-pipeline-overview.md  appfactory-agentic-pipeline-scan-notes.md  aws-patterns.md  cqrs pattern.md  development-summary.md  nestjs-patterns.md  nextjs-patterns.md  observability-tools.md  pattern-template.md  prd_build_worksheet.docx  spring-boot-patterns.md
tech-stack-implementations/backend/container-python-fastapi/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml
tech-stack-implementations/backend/container-python-fastapi/src/: __init__.py
tech-stack-implementations/backend/container-python-fastapi/src/app/: __init__.py  main.py
tech-stack-implementations/backend/container-python-fastapi/src/app/api/: __init__.py  health.py
tech-stack-implementations/backend/container-python-fastapi/src/app/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  tracing.py
tech-stack-implementations/backend/container-python-fastapi/src/app/middleware/: __init__.py  correlation_id.py
tech-stack-implementations/backend/container-python-fastapi/src/app/models/: __init__.py  response.py
tech-stack-implementations/backend/container-python-fastapi/src/app/services/: __init__.py
tech-stack-implementations/backend/container-python-fastapi/tests/: __init__.py  test_health.py
(+427 files in other folders)
